         snapshot support per patch #959422.
20040525 snapshot.c,machines/spec_se.c: allow saving of the dock/exrom
	 from the Spectrum SE.
20040525 tape.c,lib/{tape_plus3e.szx,tape_se.szx}: add autoload snaps for
	 the +3e and SE, and allow autoload snaps to be .szx as well as
	 .z80.
20040525 sound/hpsound.c: update for 16-bit sound (Stuart Brady).
20040527 sound/hpsound.c: further small update (Stuart Brady).
20040527 snapshot.c: Save Timex HSR register for the Spectrum SE.
20040527 snapshot.c: Use existing memory pages for Dock/Exrom when loading SE
         snapshots.
20040527 snapshot.c: Enable dock cartridge eject menu item when loading 2068
         snapshots with Dock cartridges installed.
20040527 if2.[ch],memory.c,periph.c,trdos.[ch],zxatasp.[ch],zxcf.[ch]:
	 simplify the handling of /ROMCS memory mapping.
20040527 utils.c: make TRDOS autoloading work again.
20040527 zxatasp.c: ZXATASP write protect should protect only the odd pages.
20040528 menu_data.c,periph.c,simpleide.c,zxatasp.c,zxcf.c,ui/ui.h,
	 ui/gtk/gtkui.c: (De)activate IDE menu items as appropriate.
20040528 ui/gtk/gtkui.c: refactor the menu item (de)activation code.
20040528 settings.pl: Make 2048 ROM label consistent with the others.
20040528 ui/gtk/debugger.c: Fix Timex HSR and DEC register display.
20040528 periph.c: Enable/disable Interface II menu items as interface is
         enabled and disabled.
20040528 periph.c: simplify code slightly.
20040529 ui/gtk/debugger.c: display the DEC if the Timex memory capability
	 is set (as it controls dock/exrom selection). Display both DEC
	 and HSR if SE memory capability set. Display ZXCF memory control
	 port if ZXCF active.
20040531 fuse.c,utils.c: load .hdf images into the active IDE interface,
	 or ZXCF if none active.
20040601 utils.c,fuse.c: Add handling of LIBSPECTRUM_CLASS_CARTRIDGE_IF2.
20040601 machines/spec_se.c: Add include <string.h> for memset.
20040601 utils.c: Fix bad merge of IF2 patch.